refactor: ♻️ adjust code